--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -1314,3 +1314,9 @@ msgstr "Einzelpreis"
 msgid "Unit of measure"
 msgstr "Mengeneinheit"
 
+#. module: equitania
+#: view:product.product:equitania.eq_product_product_form_view
+#: view:product.template:equitania.eq_product_product_template_only_form_view
+#: view:res.partner:equitania.view_partner_form
+msgid "Generate number"
+msgstr "Nummer erzeugen"
