--- a/equitania/i18n/de.po
+++ b/equitania/i18n/de.po
@@ -1720,13 +1720,13 @@ msgstr "Das Bruttogewicht in Kg."
 #: view:product.product:equitania.eq_product_product_form_view
 #: view:product.template:equitania.eq_product_product_template_only_form_view
 msgid "Invoice In"
-msgstr "ER"
+msgstr "EIngangsre."
 
 #. module: equitania
 #: view:product.product:equitania.eq_product_product_form_view
 #: view:product.template:equitania.eq_product_product_template_only_form_view
 msgid "Invoice Out"
-msgstr "AR"
+msgstr "Asugangsre."
 
 #. module: equitania
 #: view:stock.move:equitania.eq_view_move_search
